fix: fix hamburger menu not covering all menu options after adding experience and blog section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1183,7 +1183,7 @@ header p {
         #navbar.active .menu {
             display: initial;
             width: 14.5rem;
-            height: 25.5rem;
+            height: 35.5rem;
             transition: width 0.5s, height 0.5s;
             transition-delay: 0s, 0.75s;
             position: absolute;
@@ -1271,7 +1271,7 @@ header p {
         }
 
 
-    @media screen and (min-width: 981px) {
+    @media screen and (min-width: 1281px) {
 
         #navbar {
             justify-content: space-evenly;
@@ -1282,7 +1282,7 @@ header p {
             }
     }
 
-    @media screen and (max-width: 980px) {
+    @media screen and (max-width: 1280px) {
 
         #navbar {
             justify-content: space-between;
