--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1205,7 +1205,7 @@ header p {
 #navbar.active .menu {
             display: initial;
             width: 14.5rem;
-            height: 25.5rem;
+            height: 35.5rem;
             transition: width 0.5s, height 0.5s;
             transition-delay: 0s, 0.75s;
             position: absolute;
@@ -1302,7 +1302,7 @@ header p {
         }
 
 
-@media screen and (min-width: 981px) {
+@media screen and (min-width: 1281px) {
 
         #navbar {
             justify-content: space-evenly;
@@ -1314,7 +1314,7 @@ header p {
     }
 
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1280px) {
 
         #navbar {
             justify-content: space-between;
